styles.css
html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-size: 15px;
  font-family: 'Lexend Deca', sans-serif;
}

.container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 5rem;
}

.sedan {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: hsl(31, 77%, 52%);
  color: hsl(0, 0%, 95%);
  padding: 2rem;
  max-width: 240px;
}

.suv {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: hsl(184, 100%, 22%);
  color: hsl(0, 0%, 95%);
  padding: 2rem;
  max-width: 240px;
}

.luxury {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: hsl(179, 100%, 13%);
  color: hsl(0, 0%, 95%);
  padding: 2rem;
  max-width: 240px;
}

button {
  background-color: hsl(0, 0%, 95%);
  font-family: 'Lexend Deca', sans-serif;
  border: none;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border-radius: 25px;
  cursor: pointer;
}


#orange {
  color: hsl(31, 77%, 52%);
} 

#orange:hover {
  background-color: hsl(31, 77%, 52%); 
  color: hsl(0, 0%, 95%); 
  border: 2px solid hsl(0, 0%, 95%);
}

#dark-cyan {
  color: hsl(184, 100%, 22%);
}

#dark-cyan:hover {
  background-color: hsl(184, 100%, 22%); 
  color: hsl(0, 0%, 95%); 
  border: 2px solid hsl(0, 0%, 95%);
}

#very-dark {
  color: hsl(179, 100%, 13%);
}

#very-dark:hover {
  background-color: hsl(179, 100%, 13%); 
  color: hsl(0, 0%, 95%); 
  border: 2px solid hsl(0, 0%, 95%);
}

img {
  max-height: 50px;
  max-width: 50px;
}

.header {
  font-family: 'Big Shoulders Display', cursive;
  color: hsl(0, 0%, 95%);
}

.text {
  color: hsl(0, 0%, 95%);
}

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

@media screen and (max-width: 600px) {
  .container{
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .sedan, .suv, .luxury {
    max-width: 240px;
    margin: 0;
  }
}

